# Odoo_Xenon

./: .gitmodules  README.md
OCA/account-closing-18.0/account-closing-18.0/: README.md
OCA/account-closing-18.0/account-closing-18.0/setup/_metapackage/: pyproject.toml
XenonCompta/: Xenon_account.py  Xenon_budget.py  Xenon_extracompta.py  Xenon_fec.py  Xenon_parametrage.py  Xenon_progdigital.py  Xenon_suivifinancier.py  __init__.py  __manifest__.py  ir.model.access.csv  xenon_account.xml  xenon_budget_view.xml  xenon_export_cabinet_view.xml  xenon_export_suivifinancier_view.xml  xenon_extracompta.xml  xenon_parametrage.xml  xenon_progdigital.xml
XenonPlanning/: Xenon_planning.py  __init__.py  __manifest__.py
XenonSiteWeb/: __manifest__.py  _manifest_.py
XenonSiteWeb/views/: theme_xenon.xml  xenon_layout.xml
XenonVente/: Xenon_account_move.py  Xenon_account_payment.py  Xenon_calcul_prix.py  Xenon_portal.py  Xenon_product.py  Xenon_purchase.py  Xenon_purchase_purchase_stock.py  Xenon_purchase_stock_rule.py  Xenon_sale.py  Xenon_sale_advance_payment_inv.py  Xenon_sale_purchase_sale_order.py  Xenon_sale_stock_sale_order.py  Xenon_stock.py  __init__.py  __manifest__.py  ir.model.access.csv  xenon_account_payment_view.xml  xenon_calcul_prix_view.xml  xenon_product_view.xml  xenon_purchase_view.xml  xenon_report_invoice.xml  xenon_sale_portal_templates.xml  xenon_sale_report_templates.xml  xenon_sale_view.xml  xenon_stock_view.xml
XenonVente3/: Xenon_sale_purchase_sale_order.py  __init__.py  __manifest__.py  xenon_calcul_prix_view.xml  xenon_purchase_view.xml
(+5 files in other folders)
